--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,72 @@
+affine==2.4.0
+aiobotocore==2.21.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aioitertools==0.12.0
+aiosignal==1.3.2
 albucore==0.0.23
 albumentations==2.0.5
 annotated-types==0.7.0
 asciitree==0.3.3
+async-timeout==5.0.1
+attrs==25.3.0
+bioio==1.1.0
+bioio-base==1.0.6
+bioio-ome-tiff==1.0.2
+botocore==1.37.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
+click-plugins==1.1.1
+cligj==0.7.2
+cloudpickle==3.1.1
+colorcet==3.1.0
 contourpy==1.3.1
 cycler==0.12.1
+dask==2025.3.0
+distributed==2025.3.0
+einops==0.8.1
+elementpath==4.8.0
 fasteners==0.19
+fastremap==1.15.1
 filelock==3.18.0
 fonttools==4.57.0
+frozenlist==1.5.0
 fsspec==2025.3.2
+geojson==3.2.0
 h5py==3.13.0
 huggingface-hub==0.30.2
 idna==3.10
 imagecodecs==2025.3.30
+imageio==2.27.0
+imageio-ffmpeg==0.6.0
+importlib-metadata==4.13.0
+importlib-resources==5.13.0
+instanseg==0.0.2
+instanseg-torch==0.0.8
+itkwasm==1.0b189
+itkwasm-downsample==1.6.0
+itkwasm-downsample-wasi==1.6.0
 Jinja2==3.1.6
+jmespath==1.0.1
+joblib==1.4.2
 kiwisolver==1.4.8
+lazy_loader==0.4
+locket==1.0.0
+lxml==5.3.2
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
+mdurl==0.1.2
+MedPy==0.5.2
 mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.4.3
 networkx==3.4.2
+ngff-zarr==0.13.0
+nptyping==1.4.4
 numcodecs==0.13.1
-numpy==2.2.4
+numpy==1.26.4
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -35,30 +80,66 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+ome-types==0.6.0
+ome-zarr==0.10.3
 opencv-python==4.11.0.86
 opencv-python-headless==4.11.0.86
 packaging==24.2
+palettable==3.3.3
+pandas==2.2.3
+partd==1.4.2
 pillow==11.1.0
+platformdirs==4.3.7
+propcache==0.3.1
+psutil==7.0.0
 pydantic==2.11.3
+pydantic-extra-types==2.10.3
 pydantic_core==2.33.1
+Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.2
+rasterio==1.4.3
 requests==2.32.3
+rich==14.0.0
+rich-argparse==1.7.0
+s3fs==2025.3.2
 safetensors==0.5.3
+scikit-image==0.22.0
+scikit-learn==1.6.1
 scipy==1.15.2
+seaborn==0.13.2
+semver==3.0.4
+SimpleITK==2.4.1
 simsimd==6.2.1
 six==1.17.0
+slideio==2.7.1
+sortedcontainers==2.4.0
 stringzilla==3.12.3
 sympy==1.13.1
-tifffile==2025.3.30
+tblib==3.1.0
+threadpoolctl==3.6.0
+tifffile==2025.1.10
 tiffslide==2.5.0
 timm==1.0.15
+toolz==1.0.0
 torch==2.6.0
 torchvision==0.21.0
+tornado==6.4.2
 tqdm==4.67.1
 triton==3.2.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+typish==1.9.3
+tzdata==2025.2
 urllib3==2.4.0
-zarr==2.18.3
+wasmtime==31.0.0
+wrapt==1.17.2
+xarray==2025.3.1
+xmlschema==4.0.1
+xsdata==24.3.1
+yarl==1.19.0
+zarr==2.17.2
+zict==3.0.0
+zipp==3.21.0
